Fix missing emergency component icon on IE10

--- a/src/assets/sass/components/emergency.scss
+++ b/src/assets/sass/components/emergency.scss
@@ -14,7 +14,9 @@
   border-left: 40px solid $venetian-red;
   border-radius: 0;
   padding-left: 15px;
+
   &:before {
+    display: block;
     position: absolute;
     top: 14px;
     left: -30px;
@@ -26,16 +28,20 @@
     font-size: 2em;
     padding-left: 5px;
   }
+
   h3 {
     margin-top: 0;
     font-weight: 700;
   }
+
   p {
     margin-top: 0;
   }
+
   @media only screen and (max-width: $screen-xs-max) {
     border-left-width: 20px;
     padding-left: 5px;
+
     &:before {
       left: -20px;
       width: 20px;
